k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: bankapp
